@@ -1,3 +1,9 @@
+2016-10-12  Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/NSRegularExpression.m: Fix crashes in libicu due to ignored error
+	codes. Also fix a few memory leaks.
+	* Tests/base/NSRegularExpression/basic.m: Test cases for this.
+
 2016-10-11  Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Source/GSTLS.m
